<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <item
        android:id="@+id/showMap"
        android:title="@string/showMapText"
        android:checkable="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/showWalls"
        android:title="@string/showWallsText"
        android:checkable="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/showCorrectPath"
        android:title="@string/showCorrectPathText"
        android:checkable="true"
        app:showAsAction="always" />
</menu>
