<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/play_seoul"
    tools:context=".gui.PlayManuallyActivity">

    <TextView
        android:id="@+id/pathLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pathLengthText"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/zoomInButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/zoomInButton"
            android:src="@mipmap/plus" />

        <ImageView
            android:id="@+id/zoomOutButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/zoomOutButton"
            android:src="@mipmap/minus" />

    </LinearLayout>

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="370dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/menuButton"
        android:paddingVertical="5dp"
        android:src="@mipmap/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        android:orientation="horizontal">

        <edu.wm.cs.cs301.MinKim.gui.MazePanel
            android:id="@+id/mazePanel"
            android:layout_width="350dp"
            android:layout_height="350dp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/forwardButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="125dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/forwardButton"
        android:paddingHorizontal="10dp"
        android:rotation="-90"
        android:src="@mipmap/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/leftButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/leftButton"
        android:paddingHorizontal="10dp"
        android:rotation="180"
        android:src="@mipmap/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/rightButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/rightButton"
        android:paddingHorizontal="10dp"
        android:src="@mipmap/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/backwardButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/backwardButton"
        android:paddingHorizontal="10dp"
        android:rotation="90"
        android:src="@mipmap/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/jumpButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/jump"
        android:contentDescription="@string/jumpButton"
        android:padding="15dp"
        android:src="@mipmap/arrow_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>