<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/losing_congestion"
    tools:context=".gui.LosingActivity">

    <TextView
        android:id="@+id/losingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:paddingVertical="15dp"
        android:text="@string/losingText"
        android:background="@color/colorBlack"
        android:fontFamily="casual"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/shortestPathText"
        android:layout_width="wrap_content"
        android:background="@color/colorBlack"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/shortestPathText"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/losingText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pathLengthText"
        android:layout_width="wrap_content"
        android:background="@color/colorBlack"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pathLengthText"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/shortestPathText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/energyConsumptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/totalEnergyConsumptionText"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/pathLengthText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newMazeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="-15dp"
        android:text="@string/newMazeText"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/energyConsumptionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>