<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generating_seoul"
    tools:context=".gui.GeneratingActivity">

    <TextView
        android:id="@+id/generatingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loadingText"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/generatingText"
        android:indeterminate="false"
        tools:layout_editor_absoluteX="-15dp" />

    <LinearLayout
        android:id="@+id/modeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeText"
            android:textColor="@color/colorBlack"
            android:background="@color/colorPrimary"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/driverLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <TextView
                android:id="@+id/driverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driverText"
                android:textColor="@color/colorBlack"
                android:background="@color/colorPrimary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/driverSpinner"
                android:background="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/robotLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <TextView
                android:id="@+id/robotText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robotText"
                android:textColor="@color/colorBlack"
                android:background="@color/colorPrimary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/robotSpinner"
                android:background="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:paddingHorizontal="10dp"
        android:text="@string/playText"
        android:background="@color/colorHighlight"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/modeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>